--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ MATTBeamformer/*
 *asv
 *.asv
 *.m~
+noise_issue_fix.m
+noise_issue.m
+noise_issue_2.m
+old/Conn_analysis_MJB.m
+old/data_cleaning_test.m
+old/resting_conn_func.m
+old/resting_VE_noise_proj_func.m
+old/resting_VE_pow_func.m
+old/Run_VEs_AEC.m
