--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ old/resting_conn_func.m
 old/resting_VE_noise_proj_func.m
 old/resting_VE_pow_func.m
 old/Run_VEs_AEC.m
+slid_test_delme.m
+slid_test_delme.m
