--- a/.gitignore
+++ b/.gitignore
@@ -7,11 +7,4 @@ MATTBeamformer/*
 noise_issue_fix.m
 noise_issue.m
 noise_issue_2.m
-old/Conn_analysis_MJB.m
-old/data_cleaning_test.m
-old/resting_conn_func.m
-old/resting_VE_noise_proj_func.m
-old/resting_VE_pow_func.m
-old/Run_VEs_AEC.m
-slid_test_delme.m
-slid_test_delme.m
+old_scripts/*
