--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ phantom/20230330/*
 phantom/phantomsegmentedmri.mat
 phantom/beta_phantom_peak_4.0_mm.mat
 phantom/beta_phantom_peak_1.0_mm.mat
+*.png
